2006-09-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.c (button_press)
	* app/tools/gimpsourcetool.c (button_press): need to instruct the
	paint_core to make a copy of the projection whenever we clone from
	the same *image*, not from the same display. Fixes crash when
	cloning from the same image's projection in another view
	(bug #356209).

2006-09-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: when shooting a region, apply delay
	_after_ selecting region, applying before is useless.
	
2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added domain_register method.

	* plug-ins/pygimp/gimpfu.py: define N_(). Added an optional
	"domain" parameter to the register() method. Register the domain
	with GIMP and initialize gettext if it is specified.

	* plug-ins/pygimp/plug-ins/gimpcons.py: use N_() to mark menu
	label and blurb for translation. Specify the translation domain.

	* plug-ins/pygimp/plug-ins/gtkcons.py: use gettext API for modules.

2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/Makefile.am
	* plug-ins/pygimp/pygimp-intl.h: added header file for i18n support.

	* plug-ins/pygimp/gimpmodule.c: bind to the gimp20-python
	translation domain.

	* plug-ins/pygimp/procbrowser.c: marked a string for translation.

2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: translate strings in the gimp20-python
	textdomain.

	* plug-ins/pygimp/plug-ins/gtkcons.py: fixed a translation mark.

2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/unsharp.c (run): only store the settings if run
	interactively. Fixes bug #356044.

2006-09-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Trying to implement some usability recommendations from
	Peter Sikking: bigger handles, more feedback to user.
	
	* app/display/gimpcanvas.[ch]: add
	GIMP_CANVAS_STYLE_XOR_STIPPLED to set of styles.

	* app/tools/gimpdrawtool.[ch]